Closed Bug 1883209 Opened 11 months ago Closed 11 months ago

[wayland] XDG annotation is not freed with native menubar enabled

Categories

(Core :: Widget: Gtk, defect)

defect

Tracking

()

RESOLVED FIXED
125 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox123 --- unaffected
firefox124 --- unaffected
firefox125 - disabled
firefox126 --- disabled

People

(Reporter: emilio, Assigned: emilio)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: memory-leak, regression)

Attachments

(2 files)

Bug 1883184 introduced a call to xdg_dbus_annotation_manager_v1_create_surface, but nothing calls the equivalent _delete.

:uhhadd, since you are the author of the regressor, bug 1883184, could you take a look?

For more information, please visit BugBot documentation.

Flags: needinfo?(uhhadd)

Set release status flags based on info from the regressing bug 1883184

The bug is marked as tracked for firefox125 (nightly). We have limited time to fix this, the soft freeze is in 7 days. However, the bug still isn't assigned.

:gcp, could you please find an assignee for this tracked bug? Given that it is a regression and we know the cause, we could also simply backout the regressor. If you disagree with the tracking decision, please talk with the release managers.

For more information, please visit BugBot documentation.

Flags: needinfo?(gpascutto)
Flags: needinfo?(gpascutto)

Emilio, the regressing bug says the feature is disabled by default. So is this leak an actual issue? If it is, we probably need to back it out?

Flags: needinfo?(emilio)
Assignee: nobody → emilio
Status: NEW → ASSIGNED

Until it has a final shape, at least, since there's ongoing work and
discussion in the MR.

Yes, it's not enabled by default.

Flags: needinfo?(uhhadd)
Flags: needinfo?(emilio)
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/655c9f682b98 Destroy wayland annotation object. r=stransky https://hg.mozilla.org/integration/autoland/rev/1c5001e4717c Disable harder wayland's appmenu support. r=stransky
Status: ASSIGNED → RESOLVED
Closed: 11 months ago
Resolution: --- → FIXED
Target Milestone: --- → 125 Branch

Set release status flags based on info from the regressing bug 1883184

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: