Bug 1883209 - Destroy wayland annotation object. r=stransky

Differential Revision: https://phabricator.services.mozilla.com/D203932